# crypto_watcher

./: .flake8  .gitignore  .mypy.ini  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: pre-commit.yaml  release.yaml
crypto_watcher/: __init__.py  arg_parser.py  main.py  renderer.py  settings.py
crypto_watcher/services/binance/: __init__.py  binance.py  models.py
crypto_watcher/services/cryptonator/: __init__.py  cryptonator.py  models.py
crypto_watcher/services/nbminer/: __init__.py  models.py  nbminer.py
tests/: __init__.py  test_crypto_watcher.py
