[tool.poetry]
name = "crypto_watcher"
version = "0.1.0"
description = ""
authors = ["Pavel Kirilin <win10@list.ru>"]

[tool.poetry.scripts]
crypto_watcher = "crypto_watcher.main:main"

[tool.poetry.dependencies]
python = "^3.8"
pydantic = "^1.8.1"
rich = "^10.1.0"
requests = "^2.25.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
flake8 = "^3.9.1"
black = "^20.8b1"
isort = "^5.8.0"
mypy = "^0.812"
pre-commit = "^2.12.1"
yesqa = "^1.2.2"
autoflake = "^1.4"
wemake-python-styleguide = "^0.15.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
